--- a/encrypt.html
+++ b/encrypt.html
@@ -15,6 +15,14 @@
         <input type="file" name="fileToUpload" id="fileToUpload">
         
     </form>
+    <br>
+
+    <button>AES</button>
+    <button>TrippleDES</button>
+    <button>Rabbit</button>
+    <br>
+    <br>
+        
     <label for="pwd">Password:</label>
 <input type="password" id="pwd" name="pwd">
 <button>Continue</button>
