--- a/encrypt.html
+++ b/encrypt.html
@@ -36,6 +36,11 @@
         <input type="file" name="fileToUpload" id="fileToUpload">
         
     </form>
+        <br>
+    <button>AES</button>
+    <button>TrippleDES</button>
+    <button>Rabbit</button>
+        <br>
     <label for="pwd">Password:</label>
 <input type="password" id="pwd" name="pwd">
 <button>Continue</button>
