--- a/about1.html
+++ b/about1.html
@@ -20,11 +20,25 @@
 
     <main>
     <h4>About</h4>
-    <p>User will be able to upload a file and receive an encrypted form of the same file
-        Our encryption algorithms will include AES, MD5, and DES
-        Every option will have a corresponding decryption algorithm 
-        This application will supply the user with the ability to encrypt/ decrypt and compress/ decompress
-        Our compression and decompression will be completed using LZ77 and DEFLATE</p>
+    <p>
+       User will be able to upload a file and receive an encrypted form of the same file
+        Our encryption algorithms will include AES, MD5, and DES.
+        These encryptions are some of the strongest encryptions there are. 
+        AES, Advanced Encryption Standard, is a symmetric block cipher. 
+        It is used throughout the world to encrypt sensitive data. 
+        MD5, Message Digest 5, is a hash function that converts strings or text into 128-bits hash. 
+        DES also know as Data Encryption Standard. 
+        It is a symmetric-key algorithm, that encrypts groups of 64 bits.
+        Each encryption has their own corresponding decryption algorithm.
+        <br><br>
+        In addition to encryption, the web application also provides compression/decompression with LZ77 and DEFLATE. 
+        LZ77 is a lossless data compresssion algorithm. 
+        It works by groupoing symbols into strings, and then converting the strings into code.
+        DEFLATE is another lossess data compression algorithm.
+        This compression works by finding sequences of data that repeat and encode each sequence with a pair of numbers.
+        Just like the encryption, with each compression, there is a also a decompresss for LZ77 and DEFLATE.
+        This will allow users to safely send files over the internet. 
+    </p>
     </main>
 
     <footer>
