--- a/creators1.html
+++ b/creators1.html
@@ -20,14 +20,14 @@
     <main>
         <h4>Creators</h4>
         <div id="grid">
-            <img src="placeholder.png" alt="koyie" width="200px" height="250px">
+            <img src="zack.jpeg" alt="koyie" width="200px" height="250px">
             <div class="zach">
                 <p>Zack Stevens</p>
                 <br>
                 <p>Designer/ Programer</p>
             </div>
 
-            <img src="placeholder.png" alt="koyie" width="200px" height="250px">
+            <img src="deep.jpg" alt="koyie" width="200px" height="250px">
             <div class="deep">
                 <p>Deep Patel</p>
                 <br>
